@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>hermes-web</artifactId>
 	<packaging>war</packaging>
-	<name>hermes front web</name>
+	<name>hermes-web</name>
 	<url>http://maven.apache.org</url>
 	<parent>
 		<groupId>com.source3g.hermes</groupId>
@@ -45,30 +45,62 @@
 	</pluginRepositories>
 
 	<build>
-		<plugins>
+			<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.tomcat.maven</groupId>
+					<artifactId>tomcat7-maven-plugin</artifactId>
+					<version>2.1</version>
+					<configuration>
+						<uriEncoding>UTF-8</uriEncoding>
+						<path>/hermes</path>
+					</configuration>
+				</plugin>
+				
+				<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.3</version>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.4.2</version>
 				<configuration>
-					<warName>hermes-web</warName>
-					<!-- <webappDirectory>${project.build.directory}</webappDirectory> <warSourceDirectory>src/main/webapp</warSourceDirectory> -->
+					<argLine>-Xmx256M -XX:MaxPermSize=128m</argLine>
 				</configuration>
 			</plugin>
-
-			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>tomcat-maven-plugin</artifactId> 
-				<configuration> <url>http://localhost:8080/manager</url> <server>tomcat7</server> 
-				<path>/wcb</path> <port>8080</port> </configuration> -->
 
 			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.0-SNAPSHOT</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.7</version>
 				<configuration>
-					<url>http://localhost:8080/manager/html</url>
-					<server>tomcat7</server>
+					<ajdtVersion>none</ajdtVersion>
+
+					<!-- <wtpmanifest>true</wtpmanifest> <wtpapplicationxml>true</wtpapplicationxml> 
+						<wtpversion>2.0</wtpversion> -->
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>true</downloadJavadocs>
+				</configuration>
+
+
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
-		</plugins>
+			
+			</plugins>
+		</pluginManagement>
 	</build>
 </project>
